Secretary can add and upload courses

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
 DB_HOST=
 DB_PORT=
 
-DB_ADMISSION_DATABASE=
-DB_ADMISSION_USERNAME=
-DB_ADMISSION_PASSWORD=
+DB_DATABASE=
+DB_USERNAME=
+DB_PASSWORD=
 
 HUBTEL_CLIENT=
 HUBTEL_SECRET=
